--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
